--- a/app1.html
+++ b/app1.html
@@ -1,275 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi!</title>
-    <link href="Hi!_files/bootstrap.min.css" rel="stylesheet">
+    <title>Meme Generator</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            font-size: 14px;
-            background-color: #fff;
-            color: #000;
-            text-align: left;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            height: 100vh;
-            transition: all 0.5s ease;
-            padding: 20px;
-            overflow-x: auto;
+            font-family: Arial, sans-serif;
+            text-align: center;
         }
-
         .container {
-            width: 100%;
-            max-width: 800px;
-            padding: 20px;
-            text-align: justify;
+            margin-top: 50px;
+        }
+        .meme-output {
             margin-top: 20px;
-            overflow: auto;
+            display: none;
         }
-
-        .container p {
-            margin-bottom: 1em;
-        }
-
-        .container img {
-            display: block;
-            margin: 0 auto;
-            width: 80%;
+        .meme-image {
+            width: 100%;
+            max-width: 500px;
             height: auto;
-            max-width: 100%;
-            overflow: hidden;
         }
-
-        .toggles {
-            position: fixed;
-            top: 50%;
-            left: 5px;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            z-index: 10;
-            padding: 10px;
-            max-width: 25%;
-            overflow-x: hidden;
+        .input-field {
+            margin: 10px 0;
         }
-
-        .toggle-container {
-            display: flex;
-            align-items: center;
-            gap: 3px;
-        }
-
-        .toggle {
-            width: 25px;
-            height: 12px;
-            background: #ccc;
-            border-radius: 10px;
-            position: relative;
-            cursor: pointer;
-        }
-
-        .toggle:before {
-            content: '';
-            width: 10px;
-            height: 10px;
-            background: white;
-            position: absolute;
-            top: 1px;
-            left: 2px;
-            border-radius: 50%;
-            transition: 0.3s;
-        }
-
-        .toggle.active {
-            background: #4CAF50;
-        }
-
-        .toggle.active:before {
-            left: 13px;
-        }
-
-        .toggle-label {
-            font-size: 10px;
-        }
-
-        .movie-quotes {
-            position: fixed;
-            bottom: 5px;
-            right: 5px;
-            font-size: 8px;
-            text-align: right;
-            width: 20%;
-            max-height: 50vh;
-            overflow-y: auto;
-            word-wrap: break-word;
-        }
-
         .footer {
-            position: fixed;
-            bottom: 5px;
-            left: 5px;
-            font-size: 8px;
-        }
-
-        /* Responsive Styles */
-        @media (max-width: 1024px) {
-            body {
-                font-size: 12px;
-            }
-
-            .container {
-                padding: 5px;
-            }
-
-            .toggles {
-                top: 10px;
-                left: 10px;
-                flex-direction: row;
-                gap: 10px;
-                max-width: 33%;
-            }
-
-            .toggle-container {
-                font-size: 10px;
-            }
-
-            .movie-quotes {
-                font-size: 6px;
-                width: 40%;
-            }
-
-            .footer {
-                font-size: 7px;
-            }
-        }
-
-        @media (max-width: 600px) {
-            body {
-                font-size: 10px;
-            }
-
-            .container {
-                padding: 3px;
-            }
-
-            .toggles {
-                flex-direction: column;
-                gap: 5px;
-                top: 10px;
-                left: 10px;
-                max-width: 50%;
-            }
-
-            .toggle-container {
-                font-size: 8px;
-            }
-
-            .movie-quotes {
-                font-size: 5px;
-                width: 100%;
-            }
-
-            .footer {
-                font-size: 6px;
-            }
+            margin-top: 30px;
+            font-size: 12px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
+
     <div class="container">
-        <h3>Digital Artist from SCL</h3>
-        <img src="00000000000000.PNG" alt="Text Based CV Project">
-        <p>Former teaching assistant in Pure Data software in Sound Art Diploma at U. de Chile, where I wrote about concrete music and the futurist manifesto.<br>&nbsp;</p>
-        <p>Currently working on Computer Vision and text-based applications.<br>&nbsp;</p>
-        <p>More? Listen to the <a href="https://labalahumana.bandcamp.com/" target="_blank"> bandcamp </a> site.<br> , or contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
-        <p>... and go to the apps <a href="demo.html">page</a> where you can find all demo apps from app1 to app9.</p>
-    </div>
+        <h1>Meme Generator</h1>
+        <p>Enter text and create your own meme!</p>
+        
+        <div class="input-field">
+            <input type="text" id="topText" class="form-control" placeholder="Top Text" required>
+        </div>
 
-    <div class="toggles">
-        <script>
-            const themes = [
-                "hello_kitty", "keroppi", "snoopy", "forest", "food", "flowers", "unicorn", "kuromi",
-                "gothic", "sky", "space", "tech", "minimal", "modern", "retro", "vintage", "punk", "classic", 
-                "artsy", "futuristic", "pop", "geometric", "boho", "eco", "urban", "neon", "cosmic", "whimsical"
-            ];
+        <div class="input-field">
+            <input type="text" id="bottomText" class="form-control" placeholder="Bottom Text" required>
+        </div>
 
-            themes.forEach(theme => {
-                document.write(`
-                    <div class="toggle-container">
-                        <div class="toggle" id="${theme}" onclick="setTheme('${theme}')"></div>
-                        <span class="toggle-label">${theme.replace('_', ' ')}</span>
-                    </div>
-                `);
-            });
-        </script>
-    </div>
+        <div class="input-field">
+            <select id="imageSelect" class="form-control">
+                <option value="https://i.imgci.com/link_to_image/meme1.jpg">Meme Image 1</option>
+                <option value="https://i.imgci.com/link_to_image/meme2.jpg">Meme Image 2</option>
+                <option value="https://i.imgci.com/link_to_image/meme3.jpg">Meme Image 3</option>
+            </select>
+        </div>
 
-    <div class="movie-quotes">
-        <script>
-            const quotes = [
-                "Je vais lui faire une offre qu'il ne pourra pas refuser.", "Let there be light.", 
-                "I think, therefore I am.", "To be or not to be.", "The only thing we have to fear is fear itself.",
-                "That's one small step for man, one giant leap for mankind.", "In the beginning, God created the heavens and the earth.",
-                "To infinity and beyond!", "May the force be with you.", "Live long and prosper.",
-                "I’ll be back.", "Here's looking at you, kid.", "I feel the need – the need for speed.",
-                "The stuff that dreams are made of.", "It’s a beautiful day in the neighborhood.",
-                "I coulda had class. I could’ve been a contender.", "Toto, I’ve a feeling we’re not in Kansas anymore.",
-                "I’m king of the world!", "You can’t handle the truth!", "E.T. phone home.", 
-                "You had me at ‘hello’.", "Why so serious?", "Carpe Diem.", "Mamma mia!",
-                "Houston, we have a problem.", "I’ll make him an offer he can’t refuse.", "You talking to me?",
-                "Here’s Johnny!", "Keep the change, ya filthy animal.", "It’s alive! It’s alive!", 
-                "You’ve got a friend in me.", "There’s no place like home.", "I am your father.", 
-                "Don’t call it a comeback!", "I wish I knew how to quit you.", "You can’t stop the signal.",
-                "The force will be with you, always.", "I am Groot.", "I drink your milkshake!", "Yippee-ki-yay, motherfucker.",
-                "I’m Batman.", "It’s not who I am underneath, but what I do that defines me.",
-                "I’m the king of the world!", "It’s a trap!", "Just keep swimming.", "This is the start of a beautiful friendship.",
-                "I’ve seen things you people wouldn’t believe.", "I can resist everything except temptation.",
-                "After all, tomorrow is another day!", "Nobody puts Baby in a corner.", "I’m too old for this shit.", 
-                "I am vengeance. I am the night.", "You’ll shoot your eye out.", "It’s a wonderful life."
-            ];
-            const quote = quotes[Math.floor(Math.random() * quotes.length)];
-            document.write(quote);
-        </script>
-    </div>
+        <button class="btn btn-primary" onclick="generateMeme()">Generate Meme</button>
 
-    <div class="footer">
-        <a href="demo.html">Go to App Demos</a>
+        <div class="meme-output" id="memeOutput">
+            <img id="memeImage" class="meme-image" src="" alt="Meme">
+            <div id="topTextOutput" class="text-top"></div>
+            <div id="bottomTextOutput" class="text-bottom"></div>
+        </div>
+
+        <div class="footer">
+            <a href="demo.html">Back to Demo List</a>
+        </div>
     </div>
 
     <script>
-        function setTheme(theme) {
-            const toggles = document.querySelectorAll(".toggle");
-            toggles.forEach(toggle => toggle.classList.remove("active"));
-            document.getElementById(theme).classList.add("active");
+        function generateMeme() {
+            const topText = document.getElementById("topText").value;
+            const bottomText = document.getElementById("bottomText").value;
+            const imageUrl = document.getElementById("imageSelect").value;
 
-            const themeStyles = {
-                hello_kitty: { background: "#ffe4e1", color: "#ff1493", font: "Arial Rounded MT", emailColor: "#ff1493" },
-                keroppi: { background: "#b6e6b3", color: "#008000", font: "Comic Sans MS", emailColor: "#008000" },
-                snoopy: { background: "#fefefe", color: "#000", font: "Courier New", emailColor: "#000" },
-                forest: { background: "#228B22", color: "#fff", font: "Georgia", emailColor: "#fff" },
-                food: { background: "#ffebcd", color: "#ff6347", font: "Verdana", emailColor: "#ff6347" },
-                flowers: { background: "#fffae1", color: "#ff69b4", font: "Times New Roman", emailColor: "#ff69b4" },
-                unicorn: { background: "#e0e0ff", color: "#b19cd9", font: "Georgia", emailColor: "#b19cd9" },
-                kuromi: { background: "#f5d3f7", color: "#000", font: "Arial", emailColor: "#000" },
-                // Add more themes as needed
-            };
+            // Set the meme image and text
+            document.getElementById("memeImage").src = imageUrl;
+            document.getElementById("topTextOutput").innerText = topText;
+            document.getElementById("bottomTextOutput").innerText = bottomText;
 
-            const selectedTheme = themeStyles[theme] || themeStyles["hello_kitty"];
-            document.body.style.backgroundColor = selectedTheme.background;
-            document.body.style.color = selectedTheme.color;
-            document.getElementById("email").style.color = selectedTheme.emailColor;
-            document.body.style.fontFamily = selectedTheme.font;
+            // Show meme output
+            document.getElementById("memeOutput").style.display = "block";
         }
     </script>
+
 </body>
 </html>
+
 
 
 
